<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_license">Show License</string>
    <string name="about_moreinfo">More Info</string>
    <string name="about_notice">Show Notice</string>
    <string name="action_about">About</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_create">Create</string>
    <string name="action_overwrite">Overwrite</string>
    <string name="action_settings">Settings</string>
    <string name="app_description">$APP_NAME is a modern, easy-to-use, open source productivity suite for word processing, spreadsheets, presentations and more.</string>
    <string name="app_name">Collabora Online Development Edition Debug</string>
    <string name="app_name_settings">Settings</string>
    <string name="app_vendor">This release was supplied by $VENDOR.</string>
    <string name="app_version_and_hash">Version: %1$s\nonline git-hash: %2$s\ncore git-hash: %3$s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ask_for_convert_odf">Confirm File Format</string>
    <string name="ask_for_copy">This document is read-only. Do you want to make a copy for editing?</string>
    <string name="bad_directory">Invalid directory path</string>
    <string name="bmp_null">Bmp is null!</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel_label">Cancel</string>
    <string name="cannot_open_file_chooser">Cannot open file chooser</string>
    <string name="cant_open_the_document">Couldn\'t open the document</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_theme">Choose theme</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_document_locations">Close document locations</string>
    <string name="confirm_label">Confirm</string>
    <string name="convert_odf_message">This document may contain formatting or content that cannot be saved in the currently selected file format \"Text\".</string>
    <string name="copy">Copy</string>
    <string name="core_version_hash">3240820acaa2</string>
    <string name="create_new_document_title">Create New Document</string>
    <string name="current_dir">Current Directory: %1$s</string>
    <string name="default_document_name">untitled</string>
    <string name="directory_browser_label">Choose Directory</string>
    <string name="directory_not_saved">Directory not saved.</string>
    <string name="document_locations">Document locations</string>
    <string name="edit_copy">Edit a copy</string>
    <string name="enter_filename">Please enter the file name:</string>
    <string name="exiting">Exiting...</string>
    <string name="expand_button_title">Advanced</string>
    <string name="ext_document_provider_error">Invalid root file. Check your sd card configuration.</string>
    <string name="external_sd_file_system">External SD</string>
    <string name="external_sd_path">External SD path</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="failed_to_insert_image">Failed to insert image</string>
    <string name="failed_to_load_file">Failed to determine the file to load</string>
    <string name="file_actions_icon_desc">File actions</string>
    <string name="file_chromeos_read_only">This file cannot be saved in this location, opening it read-only. Move it to the Play files for full read/write access.</string>
    <string name="file_creation_failed">File creation failed</string>
    <string name="file_exists_warning">A file with this name already exists, and will be overwritten.</string>
    <string name="file_icon_desc">File icon</string>
    <string name="filter">Filter by</string>
    <string name="filter_documents">Documents</string>
    <string name="filter_everything">Everything</string>
    <string name="filter_presentations">Presentations</string>
    <string name="filter_spreadsheets">Spreadsheets</string>
    <string name="grid_view">Grid</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_draw_header">@drawable/drawer_header</string>
    <string name="info_url">https://collaboraonline.github.io/</string>
    <string name="later">Later</string>
    <string name="list_view">List</string>
    <string name="loading">Loading...</string>
    <string name="local_documents">Documents directory</string>
    <string name="local_file_system">Local file system</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="negative_cancel">Cancel</string>
    <string name="negative_im_sure">I\'m sure</string>
    <string name="new_presentation">New Presentation</string>
    <string name="new_spreadsheet">New Spreadsheet</string>
    <string name="new_textdocument">New Text Document</string>
    <string name="no_items">No items</string>
    <string name="no_recent_items">Please open a file using the folder icon in the toolbar.</string>
    <string name="not_set">Not set</string>
    <string name="online_version_hash">3db9ba06d</string>
    <string name="open">Open</string>
    <string name="otg_device_path">OTG device path</string>
    <string name="otg_file_system">OTG device (experimental)</string>
    <string name="otg_missing_error">Invalid root file. Check your OTG device and/or configuration.</string>
    <string name="otg_warning">Experimental Feature: Use only if OTG device is writable.</string>
    <string name="owncloud_settings">Cloud server settings</string>
    <string name="owncloud_unauthorized">Cannot log in to the cloud server. Check your configuration.</string>
    <string name="owncloud_unspecified_error">Unspecified error connecting to the cloud server. Check your configuration and/or try later.</string>
    <string name="owncloud_wrong_connection">Cannot connect to the cloud server. Check your configuration.</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="physical_storage_settings">Physical storage settings</string>
    <string name="positive_ok">OK</string>
    <string name="pref_category_editor">Editor Settings</string>
    <string name="pref_category_explorer">File Manager Settings</string>
    <string name="pref_enable_chrome_debugger">Chrome Debugging</string>
    <string name="pref_enable_chrome_debugger_info">Enable to use Chrome\'s debugging tool in the document</string>
    <string name="pref_file_explorer_title">File manager layout</string>
    <string name="pref_filter_summary">Set which file filter should be used by default.</string>
    <string name="pref_filter_title">Default File Filter</string>
    <string name="pref_show_debug_info">Show Debug Info</string>
    <string name="pref_show_debug_info_summary">Enable to show debug information in document viewer</string>
    <string name="pref_show_hidden_files">Hidden Files/Folders</string>
    <string name="pref_show_hidden_files_summary">Enable to show hidden files/folders</string>
    <string name="pref_sort_summary">Select how to order files: A-Z, by size or by date.</string>
    <string name="pref_sort_title">File Order</string>
    <string name="pref_user_name">User Name</string>
    <string name="pref_user_name_guest">Guest User</string>
    <string name="pref_user_name_info">Used when adding a comment</string>
    <string name="pref_viewmode_summary">View files as a grid or in a list.</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="preparing_for_the_first_start_after_an_update">Preparing for the first start after an update.</string>
    <string name="rate_now">Rate now</string>
    <string name="rate_our_app_text">If you like it, please give us 5 stars in Google Play. Your good reviews are our best motivation.</string>
    <string name="rate_our_app_title">Thank you for using %1$s!</string>
    <string name="reason_required_to_read_documents">Storage permission is required for reading your documents.</string>
    <string name="remote_server">Remote server</string>
    <string name="remove_from_list">Remove from the list</string>
    <string name="restarting">Restarting...</string>
    <string name="search_label">Go</string>
    <string name="search_menu_title">Search</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_and_port">URL and port of the cloud server.</string>
    <string name="share">Share</string>
    <string name="share_document">Share Document</string>
    <string name="share_via">Share via</string>
    <string name="sort">Sort by</string>
    <string name="sort_az">A-Z</string>
    <string name="sort_largest">Largest first</string>
    <string name="title_recents">Recent files</string>
</resources>