<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18sp" android:id="@+id/about_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_description" android:textAlignment="center"/>
        <TextView android:textSize="18sp" android:autoLink="web" android:id="@+id/about_credits" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="" android:textAlignment="center"/>
        <TextView android:textSize="14sp" android:id="@+id/about_vendor" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_vendor" android:textIsSelectable="true" android:textAlignment="center"/>
        <TextView android:textSize="14sp" android:id="@+id/about_version" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_version_and_hash" android:textIsSelectable="true" android:textAlignment="center"/>
    </LinearLayout>
</ScrollView>
