<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:theme="@style/LibreOfficeTheme_Base" android:id="@+id/drawer_layout" android:focusable="true" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent" style="@style/LibreOfficeTheme_Base">
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/overview_coordinator_layout" android:background="?android:attr/colorBackground" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:elevation="3dp" app:layout_scrollFlags="0x5" app:popupTheme="@style/LibreOfficeTheme_Base" app:theme="@style/LibreOfficeTheme_Base"/>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp">
                <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="14sp" android:textStyle="bold" android:gravity="center_vertical" android:id="@+id/header_recents" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title_recents" android:layout_weight="1"/>
                    <ImageView android:id="@+id/recent_list_or_grid" android:layout_width="96dp" android:layout_height="match_parent" android:scaleType="centerInside" android:tint="?android:attr/colorControlNormal" android:layout_weight="1" app:srcCompat="@drawable/ic_list_black_24dp"/>
                </LinearLayout>
                <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView android:id="@+id/list_recent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"/>
                    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="16dp">
                        <Space android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="3"/>
                        <TextView android:textSize="14sp" android:id="@+id/no_recent_items_msg" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/no_recent_items" android:layout_weight="2" android:textAlignment="center"/>
                        <Space android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="3"/>
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1">
            <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/editFAB" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" app:backgroundTint="@color/background_normal" app:fabSize="0" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintRight_toRightOf="0" app:srcCompat="@drawable/ic_add_black_24dp" app:useCompatPadding="true"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/writerLayout" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/editFAB" app:layout_constraintRight_toRightOf="@+id/editFAB">
                <TextView android:id="@+id/newWriterTextView" android:layout_marginTop="@dimen/new_doc_fab_tweak_top" android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom" android:text="@string/new_textdocument" style="@style/NewDocumentTextView"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/newWriterFAB" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/new_doc_fab_tweak_top" android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom" app:backgroundTint="?android:attr/colorPrimary" app:fabSize="1" app:srcCompat="@drawable/writer" app:useCompatPadding="true"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/impressLayout" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/writerLayout" app:layout_constraintRight_toRightOf="@+id/editFAB">
                <TextView android:id="@+id/newImpressTextView" android:layout_marginTop="@dimen/new_doc_fab_tweak_top" android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom" android:text="@string/new_presentation" style="@style/NewDocumentTextView"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/newImpressFAB" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/new_doc_fab_tweak_top" android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom" app:backgroundTint="?android:attr/colorPrimary" app:fabSize="1" app:srcCompat="@drawable/impress" app:useCompatPadding="true"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/calcLayout" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/impressLayout" app:layout_constraintRight_toRightOf="@+id/editFAB">
                <TextView android:id="@+id/newCalcTextView" android:layout_marginTop="@dimen/new_doc_fab_tweak_top" android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom" android:text="@string/new_spreadsheet" style="@style/NewDocumentTextView"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/newCalcFAB" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/new_doc_fab_tweak_top" android:layout_marginBottom="@dimen/new_doc_fab_tweak_bottom" app:backgroundTint="?android:attr/colorPrimary" app:fabSize="1" app:srcCompat="@drawable/calc" app:useCompatPadding="true"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView android:theme="@style/LibreOfficeTheme_Base" android:layout_gravity="start" android:id="@+id/navigation_drawer" android:layout_width="wrap_content" android:layout_height="match_parent" app:headerLayout="@layout/navigation_header" app:menu="@menu/navigation_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>
